<resources>
    <string name="app_name">Dressup</string>

    <string name="next">下一项</string>

    <!-- Strings related to login -->
    <string name="user_header">头像</string>
    <string name="login_username">手机号/邮箱</string>
    <string name="login_password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="sign_up">注册</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_username">用户名格式错误</string>
    <string name="error_invalid_password">密码格式错误</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">不能为空</string>

    <!-- Strings related to register -->
    <string name="back">返回</string>
    <string name="phone_number">请输入手机号</string>
    <string name="send">发送验证码</string>
    <string name="verification_code">请输入验证码</string>
    <string name="register_password">请输入密码</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_up_short">注册</string>
    <string name="personal">个人</string>
    <string name="personal_info">身材信息</string>
    <string name="share">分享</string>
    <string name="wardrobe">衣柜</string>
    <string name="personal_collection">我的收藏</string>
    <string name="personal_message">我的消息</string>
    <string name="personal_feedback">用户反馈</string>
    <string name="personal_safety">账户与安全</string>
    <string name="personal_clear">清除缓存</string>
    <string name="personal_about">关于</string>
    <string name="personal_exit">退出登录</string>
    <string name="username">用户名</string>
    <string name="main_page">主页</string>
    <string name="schedule">日程</string>
    <string name="hairstyle">发型</string>
    <string name="facetype">脸型</string>
    <string name="skincolor">肤色</string>
    <string name="height_weight">身高体重</string>
    <string name="figure_partial">身材局部</string>
</resources>
