<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@android:drawable/sym_action_chat"
        android:orderInCategory="0"
        android:title="@string/main_page" />

    <item
        android:icon="@android:drawable/sym_action_chat"
        android:orderInCategory="1"
        android:title="@string/schedule" />

    <item
        android:icon="@android:drawable/sym_action_chat"
        android:orderInCategory="2"
        android:title="@string/wardrobe" />

    <item
        android:icon="@android:drawable/sym_action_chat"
        android:orderInCategory="3"
        android:title="@string/share" />

    <item
        android:icon="@android:drawable/sym_action_chat"
        android:orderInCategory="4"
        android:title="@string/personal" />

</menu>